# seasonal-foods

./: .containerignore  .gitignore  Containerfile  Dockerfile.backend  Dockerfile.frontend  README.md  dev.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py  seed_db.py
backend/app/routers/: foods.py  regions.py  seasons.py
backend/app/seed/: __init__.py  curated_region_templates.py  food_locality.py  foods.json
backend/app/seed/regions/: california-hawaii.json  great-plains.json  midwest.json  mountain-west.json  northeast.json  pacific-northwest.json  south-central.json  southeast.json
backend/app/seed/seasons/: california-hawaii.json  great-plains.json  midwest.json  mountain-west.json  northeast.json  pacific-northwest.json  south-central.json  southeast.json
backend/app/seed/seasons/states/: ak.json  al.json  ar.json  az.json  ca.json  co.json  ct.json  de.json  fl.json  ga.json  hi.json  id.json  in.json  ks.json  ky.json  la.json  md.json  me.json  mn.json  ms.json  mt.json  nc.json  nj.json  nm.json  nv.json  oh.json  ok.json  or.json  pa.json  ri.json  sd.json  tn.json  tx.json  ut.json  va.json  vt.json  wv.json
backend/app/seed/state_profiles/: california-hawaii.json  great-plains.json  midwest.json  mountain-west.json  northeast.json  pacific-northwest.json  south-central.json  southeast.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
scripts/: fix_season_templates.py  generate_state_seasons.py
(+28 files in other folders)
