[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135,<1.0",
    "uvicorn[standard]>=0.42,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.12,<3.0",
    "python-dotenv>=1.2,<2.0"
]
